# my_TC_project_template

./: .env.tmpl  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/project_name/: config.py  main.ipynb
